# pmacct

./: .arch-inventory  .frlog  .gitignore  AUTHORS  CONFIG-KEYS  COPYING  ChangeLog  EXAMPLES  FAQS  INSTALL  KNOWN-BUGS  Makefile.am  Makefile.in  README  TODO  TOOLS  UPGRADE  acct.c  acinclude.m4  aclocal.m4  addr.c  addr.h  cfg.c  cfg.h  cfg_handlers.c  cfg_handlers.h  configure  configure.ac  configure.in  crc32.c  imt_plugin.c  imt_plugin.h  ip_flow.c  ip_flow.h  ip_frag.c  ip_frag.h  ll.c  log.c  log.h  log_templates.c  (+52 more)
.arch-ids/: .arch-inventory.id  AUTHORS.id  CONFIG-KEYS.id  COPYING.id  ChangeLog.id  EXAMPLES.id  FAQS.id  INSTALL.id  KNOWN-BUGS.id  Makefile.am.id  Makefile.in.id  NEWS.id  README.id  TODO.id  TOOLS.id  UPGRADE.id  acct.c.id  acinclude.m4.id  aclocal.m4.id  addr.c.id  addr.h.id  bpf_filter.c.id  cfg.c.id  cfg.h.id  cfg_handlers.c.id  cfg_handlers.h.id  configure.id  configure.in.id  crc32.c.id  imt_plugin.c.id  imt_plugin.h.id  install-sh.id  ip_flow.c.id  ip_flow.h.id  ip_frag.c.id  ip_frag.h.id  jhash.h.id  ll.c.id  log.c.id  log.h.id  (+53 more)
debian/: .arch-inventory  NEWS  README.Debian  changelog  control  copyright  dirs  docs  pmacct.default  pmacct.init  pmacct.install  pmacct.manpages  pmacct.nfacctd.default  pmacct.nfacctd.init  pmacct.nfacctd.service  pmacct.pmacctd.service  pmacct.preinst  pmacct.sfacctd.default  pmacct.sfacctd.init  pmacct.sfacctd.service  pmacct.uacctd.default  pmacct.uacctd.init  pmacct.uacctd.service  pmacctd.8  pmacctd.conf  rules  watch
debian/.arch-ids/: .arch-inventory.id  README.Debian.id  changelog.id  compat.id  control.id  copyright.id  dirs.id  docs.id  pmacct.8.id  pmacct.default.id  pmacct.init.id  pmacctd.8.id  pmacctd.conf.id  pmpgplay.8.id  rules.id  watch.id
debian/patches/: af_link.patch  debian-changes-0.12.1-1  fix-syslog-format-security  ip_dummy_masknum_fix  series
debian/source/: options
debian/{arch}/: ++default-version  +ancestry
docs/: CONFIG-KEYS  EXAMPLES  FAQS  INTERNALS  SIGNALS  TOOLS  TRIGGER_VARS  UPGRADE
docs/.arch-ids/: =id  AUTHORS.id  CONFIG-KEYS.id  EXAMPLES.id  FAQS.id  INTERNALS.id  PLUGINS.id  SIGNALS.id  TOOLS.id  TRIGGER_VARS.id  UPGRADE.id
examples/: id_map.example  mrtg.conf.hosts.example  mrtg.conf.ports.example  networks.example  networks.lst.example  nfacctd-sql.conf.example  nfacctd-sql_v1.conf.example  nfacctd-sql_v2.conf.example  pmacctd-sql.conf.example  pmacctd-sql_v1.conf.example  pmacctd-sql_v2.conf.example  ports.lst.example  pretag.map.example
examples/.arch-ids/: =id  allow-list.example.id  gnuplot-example.sh.id  gnuplot.script.example.id  mrtg-example.sh.id  mrtg.conf.example.id  mrtg.conf.hosts.example.id  mrtg.conf.ports.example.id  networks.lst.example.id  nfacctd-print.conf.example.id  nfacctd-sql.conf.example.id  nfacctd-sql_v1.conf.example.id  nfacctd-sql_v2.conf.example.id  pmacctd-imt.conf.example.id  pmacctd-multiple-plugins.conf.example.id  pmacctd-sql.conf.example.id  pmacctd-sql_v1.conf.example.id  pmacctd-sql_v2.conf.example.id  ports.lst.example.id  pretag.map.example.id  rrdtool-example.sh.id
include/: extract.h  fddi.h  ieee802_11.h  ip6.h  llc.h  sll.h
include/.arch-ids/: =id  ah.h.id  extract.h.id  fddi.h.id  ieee802_11.h.id  ip6.h.id  llc.h.id  sll.h.id
pcap/.arch-ids/: =id  README.linux.id  README.tru64.id
sql/: README.IPv6  README.mysql  README.pgsql  README.sqlite3  pmacct-create-db.mysql  pmacct-create-db_v1.mysql  pmacct-create-db_v2.mysql  pmacct-create-table.pgsql  pmacct-create-table.sqlite3  pmacct-create-table_v1.pgsql  pmacct-create-table_v2.pgsql  pmacct-create-table_v3.pgsql  pmacct-create-table_v4.pgsql  pmacct-create-table_v5.pgsql
sql/.arch-ids/: =id  README.IPv6.id  README.mysql.id  README.pgsql.id  pmacct-create-db.mysql.id  pmacct-create-db.pgsql.id  pmacct-create-db_v1.mysql.id  pmacct-create-db_v2.mysql.id  pmacct-create-db_v3.mysql.id  pmacct-create-db_v4.mysql.id  pmacct-create-table.pgsql.id  pmacct-create-table_v1.pgsql.id  pmacct-create-table_v2.pgsql.id  pmacct-create-table_v3.pgsql.id  pmacct-create-table_v4.pgsql.id  pmacct-grant-db.mysql.id
src/: Makefile.am  Makefile.in  acct.c  addr.c  cfg.c  cfg.h  cfg_handlers.c  cfg_handlers.h  classifier.c  classifier.h  conntrack.c  conntrack.h  imt_plugin.c  imt_plugin.h  ip_flow.c  ip_flow.h  ip_frag.c  ip_frag.h  ll.c  log.c  log_templates.c  log_templates.h  memory.c  mysql_plugin.c  mysql_plugin.h  net_aggr.c  net_aggr.h  network.h  nfacctd.c  nfacctd.h  nfv8_handlers.c  nfv8_handlers.h  nfv9_template.c  once.h  pgsql_plugin.c  pgsql_plugin.h  pkt_handlers.c  pkt_handlers.h  plugin_hooks.c  plugin_hooks.h  (+41 more)
src/bgp/: Makefile.in  bgp_packet.h
src/bmp/: Makefile.in
src/isis/: Makefile.in  dict.h
src/nfprobe_plugin/: Makefile.in  convtime.c  netflow1.c  netflow5.c  netflow9.c  nfprobe_plugin.c  nfprobe_plugin.h  strlcat.c  treetype.h
src/sfprobe_plugin/: Makefile.in  sfprobe_plugin.c
src/tee_plugin/: Makefile  Makefile.in
src/telemetry/: Makefile.in
{arch}/: ++default-version  +ancestry  =tagging-method
{arch}/pmacct/pmacct--debian/pmacct--debian--0.7.0/jaq@debian.org--2004/patch-log/: patch-3
{arch}/pmacct/pmacct--debian/pmacct--debian--0.7.1/jaq@debian.org--2004/patch-log/: patch-1  patch-2
{arch}/pmacct/pmacct--debian/pmacct--debian--0.7.2.1/jaq@debian.org--2004/patch-log/: patch-1  patch-2
{arch}/pmacct/pmacct--debian/pmacct--debian--0.7.2/jaq@debian.org--2004/patch-log/: patch-1
{arch}/pmacct/pmacct--debian/pmacct--debian--0.7.3/jaq@debian.org--2004/patch-log/: patch-1
{arch}/pmacct/pmacct--debian/pmacct--debian--0.7.4/jaq@debian.org--2004/patch-log/: base-0  patch-1
{arch}/pmacct/pmacct--debian/pmacct--debian--0.7.5/jaq@debian.org--2004/patch-log/: base-0  patch-1
{arch}/pmacct/pmacct--debian/pmacct--debian--0.7.6/jaq@debian.org--2004/patch-log/: base-0  patch-1
{arch}/pmacct/pmacct--debian/pmacct--debian--0.7.7/jaq@debian.org--2004/patch-log/: base-0  patch-1
{arch}/pmacct/pmacct--debian/pmacct--debian--0.7.8/jaq@debian.org--2004/patch-log/: base-0  patch-1
(+121 files in other folders)
